--- a/dict/Views/lib/css/studentexam.css
+++ b/dict/Views/lib/css/studentexam.css
@@ -1,3 +1,4 @@
+/* tasep dict css style begin */
 .tasep_dict_container{
     background: #EAF1FE;
     border: 0.5px solid #D7DFF1;
@@ -25,11 +26,12 @@
   position: absolute;
   top: -22px;
   left: 22px;
-  width: 62px;
-  height: 62px;
+  width: 66px;
+  height: 66px;
   background-color: #FFFFFF;
   border-radius: 50%;
-  z-index: 2;
+  box-shadow: 0 7px 14px 0;
+  
 }
 .tasep_dict_icon {
     background-image: url('../../images/bitmap.png');
@@ -41,3 +43,27 @@
     height: 48px;
     z-index: 2;
 }
+.tasep_dict_search_icon{
+    top:5px;
+    right:32px;
+    font-size:32px;
+    color:#f46d37;
+    
+}
+.tasep_dict_search_icon::before{
+    font-weight:1000 !important
+}
+.tasep_dict_txtSearch{
+    height:60px;
+    font-size: 24px;
+}
+
+/* tasep dict css style end */
+
+/* overwrite jquery ui css style begin */
+.ui-autocomplete.ui-widget {
+font-family: Verdana,Arial,sans-serif;
+font-size: 24px;
+}
+
+/* overwrite jquery ui css style end */
