--- a/dict/Views/lib/css/studentexam.css
+++ b/dict/Views/lib/css/studentexam.css
@@ -79,3 +79,14 @@ font-size: 24px;
 }
 
 /* overwrite jquery ui css style end */
+
+/*查詢字典表格的欄位凍結*/
+thead tr th {
+    position: sticky;
+    top: 0;
+}
+/*表格高度出現卷軸*/
+.tableWrap {
+    height: 250px;  
+    overflow: auto;
+}
